fix overflow issue

--- a/website/styles.css
+++ b/website/styles.css
@@ -36,6 +36,7 @@ html {
   align-self: center;
   display: block;
   text-align: center;
+  overflow: hidden;
 }
 
 button {
